# projectm-music-visualizer-music-video-auto-generator-suno

./: CMakeLists.txt  Makefile  README.md  progress.md  readme.roadmap.old.md
frontend_rust/: Cargo.toml
frontend_rust/src/: cli.rs  main.rs
frontend_rust/src/audio/: mod.rs
frontend_rust/src/config/: mod.rs
frontend_rust/src/gui/: mod.rs
frontend_rust/src/recording/: mod.rs
