[package]
name = "frontend_rust"
version = "0.1.0"
edition = "2021" # Changing to 2021 as it's more common for current crate ecosystem

[dependencies]
projectm = "3.1.2"
sdl2 = { version = "0.36.0", features = ["opengl"] }
egui = "0.27.2"
egui-glow = "0.27.2"
glow = "0.13.0"

# For logging later
# log = "0.4"
# env_logger = "0.10"

# For audio later
# rodio = "0.17"
# cpal = "0.15"

# For config later
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# serde_toml = "0.8"
# directories-rs = "5.0"

# For CLI later
# clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
